# CoLSE

./: .gitignore  Justfile  Makefile  README.md  clean_dockers.sh  download.sh  main.py  pyproject.toml  test_all.sh
datagen/imdb/: add_headers_from_sql.py  convert_to_para.py  download_imdb.sh  gen_pg_est.py
dockerfile/: Dockerfile
scripts/: append_estimates.py  csv_2_parquet.py  dequantizer_perfoemance.py  dequantizer_test.py  model_size.py  result_to_txt.py  test_emp_cdf.py  test_spline.py
scripts/py/: colse_enums.py  get_list_of_files.py  p_error_calculation.py  prerequisists.py  py_utils.py  remove_header.py  send_query.py
scripts/sh/: attach_and_run.sh  get_common_name.sh  install_docker.sh
scripts/sql/: correlated_index.sql  tpch_index.sql
single_table_datasets/correlated_02/: correlated_02.sql
single_table_datasets/correlated_04/: correlated_04.sql
single_table_datasets/correlated_06/: correlated_06.sql
single_table_datasets/correlated_08/: correlated_08.sql
single_table_datasets/forest/: forest.sql
single_table_datasets/tpch_lineitem_10/: tpch_lineitem_10.sql
single_table_datasets/tpch_lineitem_20/: tpch_lineitem_20.sql
single_table_datasets/tpch_sf2_z1_lineitem/: tpch_sf2_z1_lineitem.sql
src/: default_args.py  dvine_copula_recursive_dynamic.py  dvine_copula_recursive_dynamic_copy.py  dvine_copula_recursive_dynamic_v2.py  error_comp_network.py  join_dvine_copula_recursive_dynamic_v2.py  query_explorer.py  residual_model_test.py  residual_model_train.py
src/colse/: cdf_storage.py  column_ordering.py  copula_functions.py  data_path.py  (+19 more)
(+27 files in other folders)
